test_suite/tests/ui/pass/arg_mut_type.rs
use clapi::macros::*;

#[command]
#[arg(number)]
fn test(mut number: u32){}

fn main(){}